动效-风扇吹动叶子的Loading

--- a/animator-demo/src/main/res/layout/activity1.xml
+++ b/animator-demo/src/main/res/layout/activity1.xml
@@ -38,7 +38,7 @@
 
     </LinearLayout>
 
-    <cn.fortrun.animator.wave.DynamicWave
+    <cn.fortrun.demos.wave.DynamicWave
         android:id="@+id/dw_wave"
         android:layout_width="150dp"
         android:layout_height="150dp"
